# 4dvp-chap7

./: README.md  pyproject.toml
.github/actions/setup-poetry/: action.yaml
.github/workflows/: 7.2.yaml  run.yaml
src/temperature/: __init__.py  temperature.py
tests/: test_temperature.py
