[tool.poetry]
name = "eit-temperature"
version = "0.1.0"
description = "Convert temperature in another unit."
authors = ["ecole-it"]
readme = "README.md" # replace long_description
packages = [
    { include = "temperature", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "^2.15.6"
black = "^22.10.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
